refactor: day 8, part 2, prettify